--- a/Fight_detection_2.ipynb
+++ b/Fight_detection_2.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\User\\\\Desktop\\\\violence_detection\\\\non_fight\\\\ndata_100'"
+       "'C:\\\\Users\\\\Asus'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,14 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\Desktop\\violence_detection\n"
+      "[WinError 3] The system cannot find the path specified: 'C:\\\\\\\\Users\\\\\\\\User\\\\\\\\Desktop\\\\\\\\violence_detection'\n",
+      "C:\\Users\\Asus\n"
      ]
     }
    ],
@@ -11202,73 +11203,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'y' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-9063a9f0e032>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'y' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "y"
+    "import cv2\n",
+    "\n",
+    "winSize = (200,100)\n",
+    "blockSize = (40,20)\n",
+    "blockStride = (20,10)\n",
+    "cellSize = (20,10)\n",
+    "nbins = 9\n",
+    "derivAperture = 1\n",
+    "winSigma = -1.\n",
+    "histogramNormType = 0\n",
+    "L2HysThreshold = 0.2\n",
+    "gammaCorrection = 1\n",
+    "nlevels = 64\n",
+    "signedGradients = True\n",
+    " \n",
+    "hog = cv2.HOGDescriptor(winSize,blockSize,blockStride,cellSize,nbins,derivAperture,winSigma,histogramNormType,L2HysThreshold,gammaCorrection,nlevels, signedGradients)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n"
-     ]
-    },
-    {
-     "ename": "MemoryError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-361537c72c83>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     47\u001b[0m                 \u001b[1;32mfor\u001b[0m \u001b[0mb\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mhog_list\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m                     \u001b[0mcm\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 49\u001b[1;33m                     \u001b[0mres\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcom_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mcm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     50\u001b[0m                     \u001b[0mcom_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcm\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m                     \u001b[0mi\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mMemoryError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "import numpy as np\n",
@@ -11283,7 +11244,7 @@
     "    if z%6!=0:\n",
     "        com_list=[]\n",
     "        \n",
-    "        ss='C:\\\\Users\\\\User\\\\Desktop\\\\violence_detection\\\\fight\\\\data_'+str(z)\n",
+    "        ss='C:\\\\Users\\\\User\\\\Desktop\\\\violence_detection\\\\ff\\\\data_'+str(z)\n",
     "        os.chdir(ss)\n",
     "        \n",
     "        file_list = os.listdir(ss) \n",
@@ -11302,7 +11263,7 @@
     "            \n",
     "            \n",
     "            hog = cv2.HOGDescriptor()\n",
-    "            im = cv2.imread(\"frame1.jpg\")\n",
+    "            im = cv2.imread(s)\n",
     "            h = hog.compute(im).ravel()\n",
     "            \n",
     "            \n",
@@ -11336,21 +11297,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
